chore(table): update button to menu toggle

--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -44,7 +44,7 @@
     {{/if}}
   {{/unless}}
   {{#if menu-toggle--aria-label}}
-    aria-label={{menu-toggle--aria-label}}
+    aria-label="{{menu-toggle--aria-label}}"
   {{/if}}
   {{#if menu-toggle--id}}
     id="{{menu-toggle--id}}"
