--- a/src/patternfly/components/Table/templates/table-tr--basic.hbs
+++ b/src/patternfly/components/Table/templates/table-tr--basic.hbs
@@ -8,5 +8,5 @@
       <a href="#">siemur/test-space</a>
     {{/if}}
   {{/table-th}}
-  {{#> table-td table-td--action="true"}}{{/table-td}}
+  {{> table-td table-td--IsAction=true}}
 {{/table-tr}}
