--- a/src/patternfly/demos/Table/table-simple-table.hbs
+++ b/src/patternfly/demos/Table/table-simple-table.hbs
@@ -50,7 +50,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -80,7 +80,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -110,7 +110,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -140,7 +140,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -170,7 +170,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
   {{/table-tbody}}
 {{/table}}
