--- a/src/patternfly/demos/Tabs/tabs--table.hbs
+++ b/src/patternfly/demos/Tabs/tabs--table.hbs
@@ -71,7 +71,7 @@
       {{#> table-td table-td--data-label="Last commit"}}
         2 days ago
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
+      {{#> table-td table-td--IsAction=true}}
         {{> tabs--table-overflow-menu tabs--table-overflow-menu--id=(concat table--id "-dropdown-kebab-1")}}
       {{/table-td}}
     {{/table-tr}}
@@ -121,7 +121,7 @@
       {{#> table-td table-td--data-label="Last commit"}}
         2 days ago
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
+      {{#> table-td table-td--IsAction=true}}
         {{> tabs--table-overflow-menu tabs--table-overflow-menu--id=(concat table--id "-dropdown-kebab-2")}}
       {{/table-td}}
     {{/table-tr}}
@@ -171,7 +171,7 @@
       {{#> table-td table-td--data-label="Last commit"}}
         30 days ago
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
+      {{#> table-td table-td--IsAction=true}}
         {{> tabs--table-overflow-menu tabs--table-overflow-menu--id=(concat table--id "-dropdown-kebab-3")}}
       {{/table-td}}
     {{/table-tr}}
@@ -221,7 +221,7 @@
       {{#> table-td table-td--data-label="Last commit"}}
         8 days ago
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
+      {{#> table-td table-td--IsAction=true}}
         {{> tabs--table-overflow-menu tabs--table-overflow-menu--id=(concat table--id "-dropdown-kebab-4")}}
       {{/table-td}}
     {{/table-tr}}
@@ -271,7 +271,7 @@
       {{#> table-td table-td--data-label="Last commit"}}
         2 days ago
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
+      {{#> table-td table-td--IsAction=true}}
         {{> tabs--table-overflow-menu tabs--table-overflow-menu--id=(concat table--id "-dropdown-kebab-5")}}
       {{/table-td}}
     {{/table-tr}}
