--- a/src/patternfly/components/Table/table-nested.hbs
+++ b/src/patternfly/components/Table/table-nested.hbs
@@ -12,31 +12,31 @@
       {{#> table-th table-th--data-label="Description"}}Item one{{/table-th}}
       {{#> table-td table-td--data-label="Date"}}May 9, 2018{{/table-td}}
       {{#> table-td table-td--data-label="Status"}}Active{{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
     {{#> table-tr table-tr--id="nested-tr2"}}
       {{#> table-th table-th--data-label="Description"}}Item two{{/table-th}}
       {{#> table-td table-td--data-label="Date"}}May 9, 2018{{/table-td}}
       {{#> table-td table-td--data-label="Status"}}Warning{{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
     {{#> table-tr table-tr--id="nested-tr3"}}
       {{#> table-th table-th--data-label="Description"}}Item three{{/table-th}}
       {{#> table-td table-td--data-label="Date"}}May 9, 2018{{/table-td}}
       {{#> table-td table-td--data-label="Status"}}Active{{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
     {{#> table-tr table-tr--id="nested-tr4"}}
       {{#> table-th table-th--data-label="Description"}}Item four{{/table-th}}
       {{#> table-td table-td--data-label="Date"}}May 9, 2018{{/table-td}}
       {{#> table-td table-td--data-label="Status"}}Active{{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
     {{#> table-tr table-tr--id="nested-tr5"}}
       {{#> table-th table-th--data-label="Description"}}Item five{{/table-th}}
       {{#> table-td table-td--data-label="Date"}}May 9, 2018{{/table-td}}
       {{#> table-td table-td--data-label="Status"}}Active{{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
   {{/table-tbody}}
 {{/table}}
