--- a/src/patternfly/components/Table/table-td.hbs
+++ b/src/patternfly/components/Table/table-td.hbs
@@ -2,6 +2,7 @@
   {{~#if table-td--IsToggle}} {{pfv}}table__toggle{{/if}}
   {{~#if table-td--check}} {{pfv}}table__check{{/if}}
   {{~#if table-td--IsAction}} {{pfv}}table__action{{/if}}
+  {{~#if table-td--HasOverflowMenu}} {{pfv}}table__action{{/if}}
   {{~#if table-td--icon}} {{pfv}}table__icon{{/if}}
   {{~#if table-td--compound-expansion-toggle}} {{pfv}}table__compound-expansion-toggle{{/if}}
   {{~#if table-td--IsStickyColumn}} {{pfv}}table__sticky-column{{/if}}
@@ -26,11 +27,14 @@
     data-label="{{table-td--data-label}}"
   {{/if}}>
   {{#unless table-td--IsEmpty}}
-    {{#if table-td--IsAction}}
+    {{#if table-td--HasOverflowMenu}}
+      {{> table--overflow-menu}}
+    {{else if table-td--IsAction}}
       {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--aria-label='Table actions'}}
       {{!-- TODO: add small variant to menu toggle --}}
     {{else if table-td--IsToggle}}
       {{#> button
+          button--aria-label='Toggle row'
           button--IsSmall=table--IsCompact
           button--IsPlain=true
           button--IsExpanded=table-tr--expanded
