--- a/src/patternfly/components/Table/templates/table--overflow-menu.hbs
+++ b/src/patternfly/components/Table/templates/table--overflow-menu.hbs
@@ -1,6 +1,6 @@
 {{#> overflow-menu overflow-menu--id=(dasherize table--id table-tr--index 'overflow') table-td--UsesOverflowMenu=true overflow-menu--UsesMenuToggle=true}}
   {{#if overflow-menu--IsControl}}
-    {{#> overflow-menu-control overflow-menu-button--aria-label="Table actions"}}
+    {{#> overflow-menu-control}}
       {{> menu-toggle menu-toggle--IsExpanded=menu--IsExpanded menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--aria-label='Actions'}}
       {{#> menu}}
         {{#> menu-content}}
