--- a/src/patternfly/components/Table/templates/table--tr.hbs
+++ b/src/patternfly/components/Table/templates/table--tr.hbs
@@ -25,7 +25,7 @@
     {{/if}}
     {{> @partial-block}}
     {{#if table--HasActions}}
-      {{> table--action}}
+      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--aria-label='Actions'}}
     {{/if}}
   {{/table-tr}}
 {{/if}}
