--- a/src/patternfly/components/Table/templates/table-tbody--expandable.hbs
+++ b/src/patternfly/components/Table/templates/table-tbody--expandable.hbs
@@ -21,7 +21,7 @@
     {{#> table-td table-td--data-label="Action"}}
       <a href="#">Link {{table-tbody--expandable--index}}</a>
     {{/table-td}}
-    {{#> table-td table-td--action="true"}}{{/table-td}}
+    {{> table-td table-td--IsAction=true}}
   {{/table-tr}}
 
   {{#> table-tr table-tr--expandable="true" table-tr--IsExpanded=table-tbody--expandable--IsExpanded}}
