--- a/src/patternfly/demos/Table/table-compact-table.hbs
+++ b/src/patternfly/demos/Table/table-compact-table.hbs
@@ -53,7 +53,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -83,7 +83,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -113,7 +113,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -143,7 +143,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}{{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
   {{/table-tbody}}
 {{/table}}
