--- a/src/patternfly/components/DragDrop/drag-drop.scss
+++ b/src/patternfly/components/DragDrop/drag-drop.scss
@@ -4,6 +4,7 @@
   --#{$draggable}--Cursor: auto;
   --#{$draggable}--m-dragging--Cursor: grabbing;
   --#{$draggable}--m-dragging--BoxShadow: var(--pf-t--global--box-shadow--md);
+  --#{$draggable}--m-dragging--BackgroundColor: transparent;
   --#{$draggable}--m-dragging--after--BorderWidth: var(--pf-t--global--border--width--regular);
   --#{$draggable}--m-dragging--after--BorderColor: var(--pf-t--global--border--color--brand--default);
   --#{$draggable}--m-dragging--after--BorderRadius: var(--pf-t--global--border--radius--small);
@@ -18,7 +19,7 @@
     --#{$draggable}--Cursor: var(--#{$draggable}--m-dragging--Cursor);
 
     position: relative;
-    background-color: var(--#{$draggable}--m-dragging--BackgroundColor); // intentionally empty to be set if doesn't exist
+    background-color: var(--#{$draggable}--m-dragging--BackgroundColor);
     box-shadow: var(--#{$draggable}--m-dragging--BoxShadow);
 
     &::after {
