--- a/src/patternfly/demos/DataList/data-list-expandable-compact-table.hbs
+++ b/src/patternfly/demos/DataList/data-list-expandable-compact-table.hbs
@@ -56,9 +56,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--IsAction=true}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab-1") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
     {{#> table-tr}}
       {{#> table-td table-td--check="true"}}
@@ -87,9 +85,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--IsAction=true}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab-2") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
     {{#> table-tr}}
       {{#> table-td table-td--check="true"}}
@@ -118,9 +114,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--IsAction=true}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab-3") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
     {{#> table-tr}}
       {{#> table-td table-td--check="true"}}
