--- a/src/patternfly/demos/Table/table-expandable-table.hbs
+++ b/src/patternfly/demos/Table/table-expandable-table.hbs
@@ -52,7 +52,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
@@ -102,7 +102,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true" table-tr--IsExpanded="true"}}
@@ -154,7 +154,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
@@ -200,7 +200,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
@@ -246,7 +246,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
