--- a/src/patternfly/demos/Table/table-compound-expansion-table.hbs
+++ b/src/patternfly/demos/Table/table-compound-expansion-table.hbs
@@ -50,7 +50,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true" table-tr--IsExpanded="true"}}
@@ -104,7 +104,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
@@ -158,7 +158,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{> table-td table-td--action=true}}
+      {{> table-td table-td--IsAction=true}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
