--- a/src/patternfly/demos/Table/table-sortable-table.hbs
+++ b/src/patternfly/demos/Table/table-sortable-table.hbs
@@ -24,7 +24,7 @@
 
   {{#> table-tbody}}
     {{#> table-tr}}
-      {{#> table-td table-td--check="true"}}
+      {{#> table-td table-td--IsCheck=true}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'name="checkrow1" aria-labelledby="' table--id '-node1"')}}{{/check-input}}
         {{/check}}
@@ -56,7 +56,7 @@
     {{/table-tr}}
 
       {{#> table-tr}}
-      {{#> table-td table-td--check="true"}}
+      {{#> table-td table-td--IsCheck=true}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'name="checkrow2" aria-labelledby="' table--id '-node2"')}}{{/check-input}}
         {{/check}}
@@ -88,7 +88,7 @@
     {{/table-tr}}
 
     {{#> table-tr}}
-      {{#> table-td table-td--check="true"}}
+      {{#> table-td table-td--IsCheck=true}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'name="checkrow3" aria-labelledby="' table--id '-node3"')}}{{/check-input}}
         {{/check}}
@@ -120,7 +120,7 @@
     {{/table-tr}}
 
     {{#> table-tr}}
-      {{#> table-td table-td--check="true"}}
+      {{#> table-td table-td--IsCheck=true}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'name="checkrow4" aria-labelledby="' table--id '-node4"')}}{{/check-input}}
         {{/check}}
@@ -152,7 +152,7 @@
     {{/table-tr}}
 
     {{#> table-tr}}
-      {{#> table-td table-td--check="true"}}
+      {{#> table-td table-td--IsCheck=true}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute=(concat 'name="checkrow5" aria-labelledby="' table--id '-node5"')}}{{/check-input}}
         {{/check}}
