fix(menu-toggle): added small variant

--- a/src/patternfly/components/MenuToggle/menu-toggle-icon.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle-icon.hbs
@@ -3,7 +3,7 @@
     {{{menu-toggle-icon--attribute}}}
   {{/if}}>
   {{#if menu-toggle--icon}}
-    <i class="fas fa-{{menu-toggle--icon}}" aria-hidden=true></i>
+    <svg class="pf-v5-svg" viewBox="0 0 192 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"></path></svg>
   {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
