--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -3,8 +3,8 @@
 :where(.#{$text-input-group}) {
   --#{$text-input-group}--BackgroundColor: var(--pf-t--global--background--color--control--default);
   --#{$text-input-group}--BorderColor: var(--pf-t--global--border--color--default);
-  --#{text-input-group}--BorderWidth: var(--pf-t--global--border--width--control--default);
-  --#{text-input-group}--BorderRaduis: var(--pf-t--global--border--radius--small);
+  --#{$text-input-group}--BorderWidth: var(--pf-t--global--border--width--control--default);
+  --#{$text-input-group}--BorderRaduis: var(--pf-t--global--border--radius--small);
 
   // Base border
   --#{$text-input-group}__text--BorderWidth: var(--pf-t--global--border--width--control--default);
