--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -72,9 +72,9 @@
   {{/if}}
   {{#ifAny menu-toggle--IsPlain @partial-block}}
     {{#if menu-toggle--HasKebab}}
-      {{#> menu-toggle-toggle-icon}}
+      {{#> menu-toggle-icon}}
         <svg class="pf-v5-svg" viewBox="0 0 192 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"></path></svg>
-      {{/menu-toggle-toggle-icon}}
+      {{/menu-toggle-icon}}
     {{else if menu-toggle--UsesButton}}
       {{#> button button--IsPlain=true button--icon='ellipsis-v' button--IsDisabled=menu-toggle--IsDisabled button--IsAriaDisabled=menu-toggle--IsAriaDisabled button--IsExpanded=menu-toggle--IsExpanded button--aria-label='Actions'}}{{/button}}
     {{/if}}
