--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -4,11 +4,8 @@
   --#{$text-input-group}--BackgroundColor: var(--pf-t--global--background--color--control--default);
   --#{$text-input-group}--BorderColor: var(--pf-t--global--border--color--default);
   --#{$text-input-group}--BorderWidth: var(--pf-t--global--border--width--control--default);
-  --#{$text-input-group}--BorderRaduis: var(--pf-t--global--border--radius--small);
+  --#{$text-input-group}--BorderRadius: var(--pf-t--global--border--radius--small);
 
-  // Base border
-  --#{$text-input-group}__text--BorderWidth: var(--pf-t--global--border--width--control--default);
-  
   // Border hover
   --#{$text-input-group}--m-hover--BorderColor: var(--pf-t--global--border--color--hover);
 
@@ -29,7 +26,7 @@
   --#{$text-input-group}__text-input--PaddingBottom: var(--#{$pf-global}--spacer--form-element);
   --#{$text-input-group}__text-input--PaddingLeft: var(--pf-t--global--spacer--sm);
   --#{$text-input-group}__text-input--MinWidth: 12ch;
-  --#{$text-input-group}__text-input--m-hint--Color: var(--pf-t--global--text--color--default); // matches placeholder text color
+  --#{$text-input-group}__text-input--m-hint--Color: var(--pf-t--global--text--color--default);
   --#{$text-input-group}__text-input--placeholder--Color: var(--pf-t--global--text--color--placeholder);
   --#{$text-input-group}__text-input--BackgroundColor: transparent;
 
@@ -39,8 +36,6 @@
   --#{$text-input-group}__icon--TranslateY: -50%;
 
   // Utilities
-  --#{$text-input-group}__utilities--MarginRight: var(--pf-t--global--spacer--xs);
-  --#{$text-input-group}__utilities--MarginLeft: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__utilities--child--MarginLeft: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__utilities--c-button--PaddingRight: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__utilities--c-button--PaddingLeft: var(--pf-t--global--spacer--xs);
@@ -57,15 +52,15 @@
   width: 100%; // when child of flex layout, take up space
   color: var(--#{$text-input-group}--Color, inherit);
   background-color: var(--#{$text-input-group}--BackgroundColor);
-  border: var(--#{text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
-  border-radius: var(--#{text-input-group}--BorderRaduis);
+  border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
+  border-radius: var(--#{$text-input-group}--BorderRadius);
 
   &:hover {
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-hover--BorderColor);
   }
 
   &.pf-m-disabled {
-    --#{$text-input-group}__text--BorderWidth: 0;
+    --#{$text-input-group}--BorderWidth: 0;
     --#{$text-input-group}--Color: var(--#{$text-input-group}--m-disabled--Color);
     --#{$text-input-group}__icon--Color: var(--#{$text-input-group}--m-disabled--Color);
     --#{$text-input-group}--BackgroundColor: var(--#{$text-input-group}--m-disabled--BackgroundColor);
@@ -119,19 +114,6 @@
     inset: 0;
     pointer-events: none;
     content: "";
-  }
-
-  &::before {
-    border: var(--#{$text-input-group}__text--before--BorderWidth) solid var(--#{$text-input-group}__text--before--BorderColor);
-  }
-
-  &::after {
-    border-block-end: var(--#{$text-input-group}__text--after--BorderBottomWidth) solid var(--#{$text-input-group}__text--after--BorderBottomColor);
-  }
-
-  &:focus-within {
-    --#{$text-input-group}__text--after--BorderBottomWidth: var(--#{$text-input-group}__text--focus-within--after--BorderBottomWidth);
-    --#{$text-input-group}__text--after--BorderBottomColor: var(--#{$text-input-group}__text--focus-within--after--BorderBottomColor);
   }
 }
 
@@ -189,6 +171,4 @@
 .#{$text-input-group}__group {
   display: flex;
 }
-
-// stylelint-disable no-invalid-position-at-import-rule
 
